k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-demo-api
  namespace: k8s-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: k8s-demo-api
  template:
    metadata:
      labels:
        app: k8s-demo-api
    spec:
      containers:
        - name: k8s-demo-api
          image: maxnavrotsky/k8s-demo-app:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
