k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-api
  namespace: k8s-demo
spec:
  type: ClusterIP
  selector:
    app: k8s-demo-api
  ports:
    - port: 80
      targetPort: 8080
